Fix spacing from about page images and text

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -298,10 +298,10 @@ form div {
 /* about page text style */
 .about-text {
     display: block;
-    /* text-align: center; */
     padding: 20px;
     height: 50%;
-    overflow: hidden;
+    min-height: 70vh;
+    overflow: scroll;
 }
 
 .about-text>h2 {
@@ -309,9 +309,11 @@ form div {
 }
 
 .about-text p {
-    height: fit-content;
-    overflow: hidden;
-    padding: 1.5rem;
+    overflow: scroll;
+    padding: 1.5rem 1.5rem 0 1.5rem;
+    margin: 0 auto;
+    line-height: 25px;
+    font-weight: bold;
 }
 
 
@@ -795,7 +797,8 @@ h1 {
 
     /* about page */
     .about-text {
-        padding: 5px;
+        padding: 0.1rem;
+        min-height: 100vh;
     }
 
     /* gallery */
@@ -938,7 +941,8 @@ h1 {
 
     .about-text {
         text-align: unset;
-        padding: 0.5rem;
+        padding: 0.1rem 0.1rem 50px 0.1rem;
+        min-height: fit-content;
     }
 
     /* gallery */
